--- a/css/index.css
+++ b/css/index.css
@@ -70,7 +70,25 @@ p {
     width: 800px;
     margin: 0 auto;
 }
+.header1 nav{
+    display:flex;
+    justify-content:space-evenly;
+    align-items:center;
+}
 
+.imglogo{
+    margin-bottom:40px;
+    margin-top:20px;
+}
+nav a {
+    text-decoration:none;
+    color:black;
+}
+.img1{
+    display:block;
+	margin:auto;
+	margin-bottom:25px;
+}
 .top-content {
     display: flex;
     flex-wrap: wrap;
