a lot of middle content finished in about

--- a/css/index.css
+++ b/css/index.css
@@ -191,3 +191,27 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+
+
+
+
+
+.img2{
+    display:block;
+	margin:auto;
+	margin-bottom:25px;
+}
+.middle-content{
+    display:flex;
+    flex-wrap:wrap;
+    border-top:1px dotted black;
+    justify-content:space-evenly;
+}
+.bbox{
+    border:1px solid black;
+    width:45%;
+    display:flex;
+    flex-direction:column;
+    margin:10px;
+}
