--- a/css/index.css
+++ b/css/index.css
@@ -203,15 +203,33 @@ footer nav a {
 	margin-bottom:25px;
 }
 .middle-content{
+    margin-top: 20px;
     display:flex;
     flex-wrap:wrap;
-    border-top:1px dotted black;
     justify-content:space-evenly;
 }
 .bbox{
-    border:1px solid black;
+    border-bottom:1px dotted black;
     width:45%;
     display:flex;
     flex-direction:column;
     margin:10px;
+}
+h2{
+    margin-bottom:20px;
+    margin-top:10px;
+    position: relative;
+    left:-7px;
+}
+.bbox p{
+    margin-top:10px;
+    margin-bottom:10px;
+    line-height:20px;
+}
+.learnmore{
+    border-radius:10px;
+    border:2px solid black;
+    width:115px;
+    height:35px;
+    margin-bottom:15px;
 }
