--- a/css/index.css
+++ b/css/index.css
@@ -202,6 +202,14 @@ footer nav a {
 	margin:auto;
 	margin-bottom:25px;
 }
+
+.aboutdiv{
+    border-bottom:1px dotted black;
+}
+.aboutdiv p{
+    margin-bottom:20px;
+}
+
 .middle-content{
     margin-top: 20px;
     display:flex;
@@ -215,7 +223,7 @@ footer nav a {
     flex-direction:column;
     margin:10px;
 }
-h2{
+.bbox h2{
     margin-bottom:20px;
     margin-top:10px;
     position: relative;
@@ -232,4 +240,9 @@ h2{
     width:115px;
     height:35px;
     margin-bottom:15px;
+}
+
+.workdiv{
+    margin-top:50px;
+    margin-bottom:25px;
 }
